distribution/hawkeye-perfecta/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawkeye-perfecta
  labels:
    app: hawkeye-perfecta
  namespace: hawkeye-perfecta
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hawkeye-perfecta
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 3
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hawkeye-perfecta
        actorSystemName: hawkeye-perfecta
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      restartPolicy: Always
      containers:
        - name: hawkeye-perfecta
          securityContext: {}
          image: "113151489485.dkr.ecr.us-west-2.amazonaws.com/ai.beyond.hawkeye/ls-perfecta-cluster:0.0.7"
          imagePullPolicy: Always
          resources: 
            requests:
              memory: "1Gi"
              cpu: "1500m"
            limits:
              memory: "3Gi"
              cpu: "1950m"
          readinessProbe:
            httpGet:
              path: /ready
              port: 8558
          livenessProbe:
            httpGet:
              path: /alive
              port: 8558
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
            - containerPort: 8558
              name: management
              protocol: TCP
            - containerPort: 2550
              name: remoting
              protocol: TCP
          volumeMounts: []
      nodeSelector:
        node-class: "perfecta"
      tolerations:
      - key: "only-perfecta"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
