distribution/hawkeye-perfecta/api-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hawkeye-perfecta-api
  namespace: hawkeye-perfecta
spec:
  gateways:
  - hawkeye-perfecta-gateway
  hosts:
  - <<__subdomain_perfecta__>>.<<__domain__>>
  http:
  - route:
    - destination:
        host: hawkeye-perfecta-api.hawkeye-perfecta.svc.cluster.local
        port:
          number: 5000
    corsPolicy:
      allowOrigins:
      - exact: http://localhost:3000
      allowMethods:
      - POST
      - GET
      allowCredentials: true
      allowHeaders:
      - Content-Type
      maxAge: "24h"
