distribution/hawkeye-perfecta/internal-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: hawkeye-perfecta
  name: hawkeye-perfecta-internal
  namespace: hawkeye-perfecta
spec:
  hosts:
  - hawkeye-perfecta-internal.hawkeye-perfecta.svc.cluster.local
  http:
  - name: "management"
    match:
    - port: 8558
    route:
    - destination:
        host: hawkeye-perfecta-internal.hawkeye-perfecta.svc.cluster.local
        port:
          number: 8558
  - name: "remoting"
    match:
    - port: 2550
    route:
    - destination:
        host: hawkeye-perfecta-internal.hawkeye-perfecta.svc.cluster.local
        port:
          number: 2550
